--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@ html {
     background:url("img/coffee2.jpg") center center;
 }
 
-h3,h2,h1 {
+h3,h2,h1,strong {
     font-family: swissi;
     color: #7f321f;
 }
-h3 {
+h3,strong {
     letter-spacing: 0px;
     font-size: 1.0em;
 }
@@ -39,6 +39,9 @@ h1 {
 body,p {
     font-family: swiss;
     color: #eedcab;
+}
+a {
+    color: #7f321f;
 }
 
 
