--- a/style.css
+++ b/style.css
@@ -105,6 +105,11 @@ a {
     width: 75px;
     left:50%;
 }
+.banner {
+    background: #f4f4f4;
+    border: 3px solid #bbbbbb;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.8);
+}
 .rightTab {
     vertical-align: middle;
     height: 30px;
